syntax = "proto3";

package machine_discovery;

// Carries information about a host that was discovered by the Forge system
message DiscoveryInfo {
  // Enumerates discovered network interfaces on the host
  repeated NetworkInterface network_interfaces = 1;

  // Enumerates CPUs on the host
  repeated Cpu cpus = 2;

  // Enumerates discovered block devices on the host
  repeated BlockDevice block_devices = 3;

  // The CPU architecture of the machine. Possible values are:
  // - x86_64
  // - aarch64
  string machine_type = 4;

  // Enumerates NVMe devices on the host
  repeated NvmeDevice nvme_devices = 5;

  // Replaced with option 8: A single field with DmiData
  // // Enumerates dmi devices on the host
  // repeated DmiDevice dmi_devices = 6;

  // The machines TPM Endorsement Key certificate in base64 format
  // An absent values means the endorsement key could not be read
  optional string tpm_ek_certificate = 7;

  // Values that are provided by DMI (Desktop Management Interface)
  DmiData dmi_data = 8;

  // Enumerates discovered infiniband interfaces on the host
  repeated InfinibandInterface infiniband_interfaces = 9;

  // DPU specific data
  optional DpuData dpu_info = 10;

  // Enumerates GPU devices on the host
  repeated Gpu gpus = 11;

  // Enumerates Memory devices on the host
  repeated MemoryDevice memory_devices = 12;
}

message NetworkInterface {
  string mac_address = 1;
  PciDeviceProperties pci_properties = 2;
}

message InfinibandInterface {
  PciDeviceProperties pci_properties = 1;

  string guid = 2;
}

message Cpu {
  string vendor = 1;
  string model = 2;
  string frequency = 3;
  uint32 number = 4;
  uint32 core = 5;
  int32 node = 6;
  uint32 socket = 7;
}

message BlockDevice {
  string model = 1;
  string revision = 2;
  string serial = 3;
}

message NvmeDevice {
  string model = 1;
  string firmware_rev = 2;
}

message DmiData {
  string board_name = 1;
  string board_version = 2;
  string bios_version = 3;
  string product_serial = 4;
  string board_serial = 5;
  string chassis_serial = 6;
  string bios_date = 7;
  string product_name = 8;
  string sys_vendor = 9;
}

message PciDeviceProperties{
  string vendor = 1;
  string device = 2;
  string path = 3;
  sint32 numa_node = 4;
  optional string description = 5;
  optional string slot = 6;
}

message LldpSwitchData {
  string name = 1;
  string id = 2;
  string description = 3;
  string local_port = 4;
  repeated string ip_address = 5;
  string remote_port = 6;
}

message DpuData {
  string part_number = 1;
  string part_description = 2;
  string product_version = 3;
  string factory_mac_address = 4;
  string firmware_version = 5;
  string firmware_date = 6;
  repeated LldpSwitchData switches = 7;
}

message Gpu {
  string name = 1;
  string serial = 2;
  string driver_version = 3;
  string vbios_version = 4; 
  string inforom_version = 5;
  string total_memory = 6;
  string frequency = 7;
  string pci_bus_id = 8;
}

message MemoryDevice {
  optional uint32 size_mb  = 1;
  optional string mem_type = 2;
}
